--- a/Cement.html
+++ b/Cement.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
-
 <html>
 
+
 <head>
+
   <title>Srinivasa Manure Depot</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="stylesheet" type="text/css" href="style/sty1.css">
-  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:400,700,300">
+  <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Delicious">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -16,12 +17,11 @@
 
 
 <body>
-<?php include_once("includes/navigation.php"); ?>
 
 
 
 
-<?php include_once("includes/footer.php"); ?>
+
 </body>
 
 
